[tool.poetry]
name = "omt"
version = "0.1.0"
description = ""
authors = ["giovanni.buroni <giovanni.buroni@inesctec.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
statsmodels = "^0.14.4"
pandas = "^2.2.3"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
