[tool.poetry]
name = "stacky"
version = "0.1.0"
description = ""
authors = ["giovanni.buroni <giovanni.buroni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
statsmodels = "^0.14.4"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
loguru = "^0.7.3"
scipy = "^1.15.1"
matplotlib = "^3.10.0"
missingno = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
