[tool.poetry]
name = "stacky"
version = "0.1.0"
description = ""
authors = ["giovanni.buroni <giovanni.buroni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
#numpy = "^2.2.1"
numpy = ">=1.23.5,<2.0.0"  # Adjusted to match TensorFlow requirements
statsmodels = "^0.14.4"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
loguru = "^0.7.3"
scipy = "^1.15.1"
matplotlib = "^3.10.0"
missingno = "^0.5.2"

# Add TensorFlow dependencies here for extras
tensorflow-macos = "^2.16.2"
tensorflow-metal = "^1.1.0"
tensorflow = "^2.16.2"
numba = "^0.61.0"
plotly = "^6.0.0"
cvxpy = "^1.6.0"
pre-commit = "^4.1.0"
detect-secrets = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.poetry.extras]
# For Apple Silicon (M1/M2) support
tensorflow-m1 = ["tensorflow-macos", "tensorflow-metal"]
# For standard x64 systems
tensorflow-x64 = ["tensorflow"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
